--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -178,7 +178,7 @@ Black-hole X-ray binaries with dynamical mass measurements provide the only othe
 \textbf{Black Hole Spin Magnitudes:} Black hole X-ray binaries also provide an opportunity for measuring black hole spins \citep[see][for a recent review]{MillerMiller:2015}.  Continuum fitting of the X-ray flux from the disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, assumed to correspond to the radius of the innermost stable circular orbit, which is a sensitive function of black hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the models can suffer from significant systematics.  For example, \ilya{out of six} systems for which both disk continuum and disk reflection spin measurements are available, the two methods are inconsistent at the $3$ or $5$ sigma level \ilya{for two systems}, and for one system the statistical uncertainty is so large as to span nearly the full allowed range from $0$ to $1$.  However, for the remaining \ilya{three} systems with both measurements available, both methods yield spins $\chi \gtrsim 0.9$.  
 
 \textbf{Inconsistency with Spin Observations from GW Sources?} Most relevantly, these high-spin observations include two high-mass X-ray binaries: LMC X-1 and Cygnus X-1.  This is significant, because unlike long-lived low-mass X-ray binaries, whose spin magnitudes could be altered by accretion from the companion, especially if they started out with intermediate-mass companions \citep{Podsiadlowski:2003,Fragos:2015}, high-mass X-ray binaries are too short-lived to enable significant spin changes due to accretion \citep{KingKolb:1999}.  %Moreover, such high-mass X-ray binaries may be direct progenitors of merging binary black holes \citep{Bulik:2008,CygnusX3:2012}; in fact, 
-Isolated binaries that form binary black holes must go through the high-mass X-ray binary phase during their evolution.  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, at least some stellar-mass black holes in systems similar to those that could go on to become merging black holes should have high spins.  However, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the binary black holes \ilya{observed in gravitational waves} \citep{HotokezakaPiran:2017}.  Moreover, the spin magnitude measurements \ilya{in X-ray binaries} could be very sensitive to the modelling assumptions, and the systematic errors may dominated the claimed statistical ones \citep[e.g.,][]{Basak:2017,Kawano:2017}.
+Isolated binaries that form binary black holes must go through the high-mass X-ray binary phase during their evolution.  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, at least some stellar-mass black holes in systems similar to those that could go on to become merging black holes should have high spins.  However, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the binary black holes \ilya{observed in gravitational waves} \citep{HotokezakaPiran:2017}.  Moreover, the spin magnitude measurements \ilya{in X-ray binaries} could be very sensitive to the modelling assumptions, and the systematic errors may dominate the claimed statistical ones \citep[e.g.,][]{Basak:2017,Kawano:2017}.
 
 \textbf{Black Hole Spin Directions:} We know even less about the spin directions than the spin magnitudes.  Although black-hole spin-orbit alignment is assumed in continuum flux measurements \citep{MillerMiller:2015}, some black-hole X-ray binaries, including GRO J1655-40 \citep{Martin:2008}, 4U 1543-47 \citep{MorningstarMiller:2014} and particularly V4641 Sgr \citep{Orosz:2001,Martin:2008b} appear to indicate that the microquasar jet, presumably aligned with the BH spin axis, is misaligned with the orbit.  Moreover, initial stellar spins in massive binaries have been observed to be misaligned \citep[e.g.,][]{Albrecht:2009,Albrecht:2014}, though there are opportunities for realignment during binary evolution, as described below.
 
@@ -212,23 +212,32 @@ When the detection of GW150914 was first announced, many were surprised that it 
 
 %\todo{Update left panel of plot to show periapsis on horizontal axis.  Take max radial extent plot from Simon?}
 
-\textbf{So then why do the \ilya{gravitational-wave} sources exist at all?} Given the above, one might conclude that gravitational-wave driven compact binary mergers do not exist. Yet their existence and detection were expected \ilya{\citep{ratesdoc}}. \ilya{In fact, \citet{Dyson:1962} conjectured about the existence of merging neutron star binaries even before the first neutron star was observed; \citet{Tutukov:1973} argued that binary compact objects must naturally (albeit  rarely, and at wide separations in their model) form as a result of massive binary evolution; and the Hulse--Taylor binary pulsar demonstrated the existence of binary compact objects that would merge within the age of the Universe.}    Three leading formation scenarios for merging compact-object binaries have been proposed: (i) finely tuned binary evolution that brings the stars closer only after their major expansion phases have passed; (ii) finely tuned stellar evolution that prevents the parent stars from expanding at all; and (iii) assembly of a close binary from black holes that formed from isolated stars. Contrived as these scenarios sound, all three might plausibly contribute to the production of binary black hole mergers. We explore all three in more detail below. (We won't discuss some of the more exotic proposed mechanisms, such as the fragmentation of a single stellar core into two black holes \citep{Loeb:2016} -- \citet{Woosley:2016,Dai:2017} discuss the problems with this picture -- or non-astrophysical formation scenarios such as primordial black holes of cosmological origin \citep[e.g.,][]{Bird:2016}.)
+\textbf{So then why do the \ilya{gravitational-wave} sources exist at all?} Given the above, one might conclude that gravitational-wave driven compact binary mergers do not exist. Yet their existence and detection were expected \ilya{\citep{ratesdoc}}. \ilya{In fact, \citet{Dyson:1962} conjectured about the existence of merging neutron star binaries even before the first neutron star was observed; \citet{Tutukov:1973} argued that binary compact objects must naturally (albeit  rarely, and at wide separations in their model) form as a result of massive binary evolution; \citet{vdHDeLoore:1973} argued that tight high mass X-ray binaries -- progenitors of compact object binaries -- must also form; and the Hulse--Taylor binary pulsar demonstrated the existence of binary compact objects that would merge within the age of the Universe.}    Three leading formation scenarios for merging compact-object binaries have been proposed: (i) finely tuned binary evolution that brings the stars closer only after their major expansion phases have passed; (ii) finely tuned stellar evolution that prevents the parent stars from expanding at all; and (iii) assembly of a close binary from black holes that formed from isolated stars. Contrived as these scenarios sound, all three might plausibly contribute to the production of binary black hole mergers. We explore these three scenarios in more detail below. (We won't discuss some of the more exotic proposed mechanisms, such as the fragmentation of a single stellar core into two black holes \citep{Loeb:2016} -- \citet{Woosley:2016,Dai:2017} discuss the problems with this picture -- or non-astrophysical formation scenarios such as primordial black holes of cosmological origin \citep[e.g.,][]{Bird:2016}.)
 
 \subsection{The Candidate Formation Scenarios}
 \subsubsection{Bring the stars together after they have expanded: classical isolated binary evolution via the common-envelope phase}
 
 The first possible channel is perhaps the most studied one, \ilya{placing compact objects in the same framework as other very close binaries, such as cataclysmic variables in which at least one of the stars should have extended beyond the binary's current orbital separation during an earlier stage of its evolution \citep[e.g.,][]{Paczynski:1976}}.  In this scenario the two stars are born in a relatively wide binary, allowing them space to expand.  However, at a critical moment in its evolution, the binary is tightened by a factor of two or more orders of magnitude through dynamically unstable mass transfer, known as a common envelope phase. The resulting tight binary may then be close enough to merge through gravitational-wave emission.  \ilya{\citet{SmarrBlandford:1976} may have been the first to explicitly point to this channel in the context of compact object binary formation when analyzing the evolutionary history of the Hulse--Taylor binary pulsar.} The channel has been studied at length over the past 40 years, with significant contributions from \citet{TutukovYungelson:1993,Lipunov:1997,BetheBrown:1998,Nelemans:2003,VossTauris:2003,Pfahl:2005,Dewi:2006,Kalogera:2007,OShaughnessy:2008,Dominik:2012,Belczynski:2016,EldridgeStanway:2016} and many others. Rather than summarizing all of the steps and challenges in our understanding of massive binary evolution (see the papers above and the review by \citet{PostnovYungelson:2014} for details), we provide a schematic outline of an evolutionary scenario that leads to the formation of a GW150914-like merging system.
 
-\ajf{Rework to include numbered steps once new figure is made}
-The evolution of this system is sketched out in a van den Heuvel -- style diagram in \autoref{fig:isol_binary}.  Two massive stars of perhaps $100$ and $75$ solar masses are born in a low-metallicity environment ($\sim 5\%$ of solar metallicity)  binary at a separation of $\sim 10$ AU.  The more massive primary reaches the end of its main sequence first.  At this stage, it has completed fusing hydrogen into helium in its core, and with the loss of energy input, the core begins to contract.  The release of gravitational binding energy and the onset of hydrogen shell burning cause the hydrogen-rich envelope to expand, until the primary expands past the L1 point and overflows its Roche Lobe, beginning to transfer mass onto the secondary.  The mass transfer proceeds on the thermal timescale of the primary donor and is likely significantly non-conservative, as the less evolved secondary, with its correspondingly longer thermal timescale, is unable to accept mass at the rate at which it is being donated.  The loss of mass from the binary further widens the system, to perhaps $\sim 20$ AU.  The primary loses its entire envelope, leaving behind a naked helium-burning star -- a Wolf-Rayet star.  Following wind-driven mass loss, which further widens the system, the primary collapses into a black hole; here, this collapse is assumed to be complete, without an associated natal kick.  When, a few hundred thousand years later, the secondary reaches the end of its main sequence, the process repeats in reverse: the secondary expands until it commences mass transfer onto the primary.  By this time, the primary has lost around two thirds of its initial mass through a combination of envelope stripping, winds, and possible mass loss during a supernova.  Meanwhile, this mass transfer would need to be almost wholly non-conservative if the accretion onto the black hole obeys the Eddington limit.  Consequently, mass transfer would lead to a rapid hardening of the binary at a rate that is faster than the reduction in the size of the secondary donor on mass loss.  As a result, the more mass it donates, the more the donor overflows its Roche lobe.  This runaway process of dynamically unstable mass transfer leads to the formation of a common envelope of gas around the binary out of the donor's envelope; see \citet{Ivanova:2013} for a review.  The drag force on the black hole from the envelope leads to rapid spiral-in.   The dissipated orbital energy is deposited in the envelope, and may ultimately lead to the expulsion of the envelope.  The orbital energy is decreased by an amount necessary to unbind the envelope, and the resulting black hole -- Wolf-Rayet binary has a separation of only $\sim 35 R_\odot$ in this example.  Following further wind-driven mass loss from the secondary and its collapse into a black hole, the black hole binary is formed.  While this entire process takes only a few million years after the formation the binary, the subsequent inspiral through gravitational-wave emission will last for around 10 billion years before merger.
-
 \begin{figure}
 	\centering
 	\includegraphics[width=0.45\textwidth]{channel1.png}
-	\caption{\label{fig:isol_binary} A sketch of merging black hole binary formation via the isolated binary channel.}
+	\caption{\label{fig:isol_binary} A sketch of merging black hole binary formation \ilya{through isolated binary evolution via the common phase.}}
 \end{figure}
 
-Of course, this relatively simple picture holds many uncertainties: the rate of mass loss through winds, particularly during specific stellar evolutionary phases such as the luminous blue variable phase \citep{Mennekens:2014} and its dependence on metallicity; the efficiency of stable mass transfer efficiency; the response of a star to mass loss and the onset of a common envelope phase \citep{Pavlovskii:2017}; common-envelope survival and the amount of binary hardening associated with the envelope ejection; supernova fallback and natal kicks for black holes \citep[e.g.,][]{Repetto:2012,Mandel:2015kicks}; the possible contribution of double-core common envelopes when unstable mass transfer is initiated between two evolved stars; and the role of dynamically stable non-conservative mass transfer onto a lower-mass compact donor in achieving sufficient binary hardening  \citep{vandenHeuvel:2017,Neijssel:2018}.  We will discuss the possibilities of addressing some of these with future gravitational-wave observations in \autoref{prospect}.
+The evolution of this system is sketched out in a van den Heuvel -- style diagram in \autoref{fig:isol_binary}\ilya{, and the steps below follow the panels in that figure}:
+\begin{itemize}  
+\item{a.} Two massive stars of perhaps $100$ and $75$ solar masses are born in a low-metallicity environment ($\sim 5\%$ of solar metallicity)  binary at a separation of $\sim 10$ AU.  
+\item{b.} The more massive primary reaches the end of its main sequence first.  At this stage, it has completed fusing hydrogen into helium in its core, and with the loss of energy input, the core begins to contract.  The \ilya{associated} release of gravitational binding energy and the \ilya{eventual} onset of hydrogen shell burning cause the hydrogen-rich envelope to expand.  \ilya{For a sufficiently close binary, the primary expands past the equipotential surface known as the Roche Lobe}, and beginning to transfer mass onto the secondary.  The mass transfer proceeds on the thermal timescale of the primary donor and could be significantly non-conservative, as the less evolved secondary, with its correspondingly longer thermal timescale, is unable to accept mass at the rate at which it is being donated.  The loss of mass from the binary further widens the system, to perhaps $\sim 20$ AU.  
+\item{c.} The primary loses its entire envelope, leaving behind a naked helium-burning star -- a Wolf-Rayet star.  
+\item{d.} Following wind-driven mass loss, which further widens the system, the primary collapses into a black hole; here, this collapse is assumed to be complete, without an associated natal kick.  
+\item{e.} When, a few hundred thousand years later, the secondary reaches the end of its main sequence, the process repeats in reverse: the secondary expands until it commences mass transfer onto the primary.  By this time, the primary has lost around two thirds of its initial mass through a combination of envelope stripping, winds, and possible mass loss during a supernova.  Meanwhile, this mass transfer would need to be almost wholly non-conservative if the accretion onto the black hole obeys the Eddington limit, \ilya{which corresponds to an equilibrium between gravity and the pressure on infalling material of the radiation released during accretion.}  Consequently, mass transfer would lead to a rapid hardening of the binary at a rate that is faster than the reduction in the size of the secondary donor on mass loss.  As a result, the more mass it donates, the more the donor overflows its Roche lobe.  
+\item{f.} This runaway process of dynamically unstable mass transfer leads to the formation of a common envelope of gas around the binary out of the donor's envelope; see \citet{Ivanova:2013} for a review.  The drag force on the black hole from the envelope leads to rapid spiral-in.   The dissipated orbital energy is deposited in the envelope, and may ultimately lead to the expulsion of the envelope.  
+\item{g.} The orbital energy is decreased by an amount necessary to unbind the envelope, and the resulting black hole -- Wolf-Rayet binary has a separation of only $\sim 35 R_\odot$ in this example.  
+\item{h.} Following further wind-driven mass loss from the secondary and its collapse into a black hole, the black hole binary is formed.  While this entire process takes only a few million years \ilya{from the formation of a stellar binary to the formation of a binary black hole}, the subsequent inspiral through gravitational-wave emission will last for around 10 billion years before merger.
+\end{itemize}
+
+Of course, this relatively simple picture holds many uncertainties: the rate of mass loss through winds, particularly during specific stellar evolutionary phases such as the luminous blue variable phase \citep{Mennekens:2014} and its dependence on metallicity; \ilya{the fraction of the donated mass that is added to the accretor during stable mass transfer and the specific angular momentum of the mass that is removed from the binary}; the response of a star to mass loss and the onset of a common envelope phase \citep{Pavlovskii:2017}; common-envelope survival and the amount of binary hardening associated with the envelope ejection; supernova fallback and natal kicks for black holes \citep[e.g.,][]{Repetto:2012,Mandel:2015kicks}; the possible contribution of double-core common envelopes when unstable mass transfer is initiated between two evolved stars; and the role of dynamically stable non-conservative mass transfer onto a lower-mass compact donor in achieving sufficient binary hardening  \citep{vandenHeuvel:2017,Neijssel:2018}.  We will discuss the possibilities of addressing some of these with future gravitational-wave observations in \autoref{prospect}.
 
 \subsubsection{Abracadabra, thou shalt not expand: chemically homogeneous evolution}
 
@@ -302,7 +311,7 @@ The star formation rate in the local Universe is $\sim 0.01 M_\odot$ Mpc$^{-3}$ 
 
 \subsection{System Properties}
 \subsubsection{Masses}
-Once formed by stellar collapse or supernova, the black holes in the binaries of interest will have roughly constant masses. The first black hole to form is unlikely to accrete a significant amount of mass from its companion: doubling its mass at the Eddington limit, which corresponds to an equilibrium between gravity and the pressure on infalling material of the radiation released during accretion, would take more than 100 million years; the massive companion will only survive for a small fraction of that time. After formation of the second compact object, there is very little further accretion in the system. The mass of each black hole is thus almost equal to its mass at formation. 
+Once formed by stellar collapse or supernova, the black holes in the binaries of interest will have roughly constant masses. The first black hole to form is unlikely to accrete a significant amount of mass from its companion: doubling its mass at the Eddington limit would take more than 100 million years; the massive companion will only survive for a small fraction of that time. After formation of the second compact object, there is very little further accretion in the system. The mass of each black hole is thus almost equal to its mass at formation. 
 
 The classical isolated binary evolution channel discussed in detail above can produce binary black holes with a broad range of masses, matching all observations to date \citep[e.g.,][]{Stevenson:2017} as well as GW170817 and the observed Galactic double neutron stars \citep[e.g.,][]{Kruckow:2018,VignaGomez:2018}.  In fact, contrary to mistaken lore, the high masses of the first observed black holes were not entirely surprising: such systems were predicted to arise in low-metallicity environments and make a significant contribution to the detected population because more massive binaries emit more energy in gravitational waves \citep{Dominik:2014}; the effect of metallicity is discussed further in \autoref{environ} below. 
 
