--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -241,33 +241,35 @@ Of course, this relatively simple picture holds many uncertainties: the rate of 
 
 \subsubsection{Abracadabra, thou shalt not expand: chemically homogeneous evolution}
 
-\autoref{fig:chem_homog}
-
-What if some types of massive stars did not expand? A massive binary could then start out at an orbital period of a couple of days, close enough that if the stars produced black holes in situ they would merge within the age of the Universe through gravitational-wave emission. Without an expansion phase, the parent stars would be in no danger of merger: no fine-tuning of binary evolution would then be required to construct a plausible formation scenario for tight black-hole binaries. This scenario does, however, require fine-tuning of stellar evolution. But it may be the case that high-mass, low-metallicity stars in close binaries behave exactly as needed for this scenario to work.
-
-Binary companions raise tides on each other, much like the Moon's tides on Earth.  If a binary is tight enough that each star fills a significant fraction of its Roche lobe, tidal energy dissipation is rapid and proceeds until the stars are tidally locked, i.e. the rotation periods of the stars are synchronized to the orbital period of the binary. This also means that the stars are rotating at a few tens of percent of their break-up velocities.  Such rapidly rotating stars will develop significant temperature gradients between the poles and the equator, which may lead to efficient large-scale meridional circulation within each star \citep{Eddington:1925,Sweet:1950}.  \citet{EndalSofia:1978} and subsequent studies \citep[e.g.,][]{Heger:2000,MaederMeynet:2000,Yoon:2006} explored the internal shears and their impact on the mixing of chemical species within the star.  Although quantitative predictions differ, it appears that rapidly rotating massive stars may efficiently transport hydrogen into the core and helium out into the envelope until nearly all of the hydrogen in the star is fused into helium.  Then, at the end of the main sequence, the star behaves essentially as a Wolf-Rayet naked helium star, contracting rather than expanding. As long as the metallicity \ajf{winds?} is sufficiently low to avoid significant binary widening -- which would lead to the loss of co-rotation and chemically homogeneous evolution \citep{deMink:2009} -- the binary can avoid mass transfer.  \citet{MandeldeMink:2016,deMinkMandel:2016}, and \citet{Marchant:2016} explored such binaries and concluded that they could present a viable channel for forming the most massive \ilya{gravitational-wave} sources (such as GW150914), though not the lowest-mass systems.
-
 \begin{figure}
 	\centering
 	\includegraphics[width=0.4\textwidth]{channel2.png}
 	\caption{\label{fig:chem_homog} A sketch of merging black hole binary formation via the chemically homogeneous evolution channel.}
 \end{figure}
 
+What if some types of massive stars did not expand? A massive binary could then start out at an orbital period of a couple of days, close enough that if the stars produced black holes in situ they would merge within the age of the Universe through gravitational-wave emission. Without an expansion phase, the parent stars would be in no danger of merger: no fine-tuning of binary evolution would then be required to construct a plausible formation scenario for tight black-hole binaries. This scenario does, however, require \ilya{some unproven assumptions regarding} stellar evolution. But it may be the case that high-mass, low-metallicity stars in close binaries behave exactly as needed for this scenario to work.
+
+Binary companions raise tides on each other, much like the Moon's tides on Earth.  If a binary is tight enough that each star fills a significant fraction of its Roche lobe, tidal energy dissipation is rapid and proceeds until the stars are tidally locked, i.e. the rotation periods of the stars are synchronized to the orbital period of the binary. This also means that the stars are rotating at a few tens of percent of their break-up velocities.  Such rapidly rotating stars will develop significant temperature gradients between the poles and the equator, which may lead to efficient large-scale meridional circulation within each star \citep{Eddington:1925,Sweet:1950}.  \citet{EndalSofia:1978} and subsequent studies \citep[e.g.,][]{Heger:2000,MaederMeynet:2000,Yoon:2006} explored the internal shears and their impact on the mixing of chemical species within the star.  Although quantitative predictions differ, it appears that rapidly rotating massive stars may efficiently transport hydrogen into the core and helium out into the envelope until nearly all of the hydrogen in the star is fused into helium.  Then, at the end of the main sequence, the star behaves essentially as a Wolf-Rayet naked helium star, contracting rather than expanding. As long as the metallicity is sufficiently low that \ilya{the wind-driven mass loss does not} significantly widen the binary -- which would lead to the loss of co-rotation and chemically homogeneous evolution \citep{deMink:2009} -- the binary can avoid mass transfer.  \citet{MandeldeMink:2016,deMinkMandel:2016}, and \citet{Marchant:2016} explored such binaries and concluded that they could present a viable channel for forming the most massive \ilya{gravitational-wave} sources (such as GW150914), though not the lowest-mass systems.  \ilya{This evolutionary pathway is sketched out in \autoref{fig:chem_homog}.}
+
 \subsubsection{The black hole matchmaking club: dynamical formation in dense stellar environments}
-
-\autoref{fig:dynamical}
-
-The last possibility we will describe is that the merging black holes may not have formed in a binary at all.  Instead they formed from the collapse of independent massive stars, but were then introduced to each other by a matchmaker, or rather a whole array of matchmakers.  Suppose the two black holes formed in a dense stellar environment such as a globular cluster.  As the most massive objects in the cluster, they naturally sink toward the cluster center as energy is equipartitioned throughout the cluster in the process known as mass segregation.  Once there, they may form binaries through three-body interactions, or by substituting into existing binaries: in a $2+1$ interaction, the lightest object is usually ejected in favor of the two heavier objects forming a binary.  Subsequent interactions with other objects in the cluster -- the matchmakers -- will gradually tighten the black-hole binary: the interlopers are likely to leave with  slightly higher velocities than they arrived with, each time removing energy from the binary.   If the density of objects is high enough to ensure a suitable rate of interactions, the binary will be hardened until it is compact enough to merge through gravitational-wave emission (provided it does not get kicked out of the cluster through a recoil kick from the last interaction -- and even then, it may still go on to merge outside of the cluster).  
-
-The prospects for these dynamically formed merging binary black holes in globular clusters have been explored through a series of analytical estimates and numerical experiments by \citet{Sigurdsson:1993,Kulkarni:1993,PZwart:2000,OLeary:2006,Banerjee:2010,Downing:2011,Morscher:2015,Mapelli:2016,Rodriguez:2016} and others.  \citet{OLeary:2008} and \citet{MillerLauburg:2008} have argued that dynamical formation could also take place in galactic nuclei with and without a massive black hole, respectively (but cf.~\citet{Tsang:2013} for the former).  \citet{Bartos:2016} and \citet{Stone:2016} have described the role that an accretion disk in an active galactic nucleus could play in enhancing the rate of binary black hole mergers.
-
-Dynamical formation and isolated binary evolution mechanisms are of course not mutually exclusive; for example, the inner binaries in hierarchical triple systems may evolve as isolated binaries, but may then be brought together more efficiently through Lidov-Kozai oscillations \citep{Lidov:1962,Kozai:1962}; see, e.g., \citet{PeretsKratter:2012,Belczynski:2014VMS}.
 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.4\textwidth]{channel3.png}
 	\caption{\label{fig:dynamical} A sketch of merging black hole binary formation via the dynamical evolution channel.}
 \end{figure}
+
+The last possibility we will describe is that the merging black holes may not have formed in a binary at all.  Instead they formed from the collapse of independent massive stars, but were then introduced to each other by a matchmaker, or rather a whole array of matchmakers.   \ilya{This evolution is illustrated in \autoref{fig:dynamical}:}  
+\begin{itemize}
+\item{a.} Suppose the two black holes formed in a dense stellar environment such as a globular cluster.  
+\item{b.} As the most massive objects in the cluster, they naturally sink toward the cluster center as energy is equipartitioned throughout the cluster in the process known as mass segregation.  Once there, they may form binaries through three-body interactions, or by substituting into existing binaries: in a $2+1$ interaction, the lightest object is usually ejected in favor of the two heavier objects forming a binary.  
+\item{c,d.}Subsequent interactions with other objects in the cluster -- the matchmakers -- will gradually tighten the black-hole binary: the interlopers are likely to leave with  slightly higher velocities than they arrived with, each time removing energy from the binary.   
+\item{e.} If the density of objects is high enough to ensure a suitable rate of interactions, the binary will be hardened until it is compact enough to merge through gravitational-wave emission, provided it does not get kicked out of the cluster through a recoil kick from the last interaction -- and even then, it may still go on to merge outside of the cluster.  
+\end{itemize}
+
+The prospects for these dynamically formed merging binary black holes in globular clusters \ilya{and young massive stellar clusters} have been explored through a series of analytical estimates and numerical experiments by \citet{Sigurdsson:1993,Kulkarni:1993,PZwart:2000,OLeary:2006,Banerjee:2010,Downing:2011,Morscher:2015,Mapelli:2016,Rodriguez:2016} and others.  \citet{OLeary:2008} and \citet{MillerLauburg:2008} have argued that dynamical formation could also take place in galactic nuclei with and without a massive black hole, respectively (but cf.~\citet{Tsang:2013} for the former).  \citet{Bartos:2016} and \citet{Stone:2016} have described the role that an accretion disk in an active galactic nucleus could play in enhancing the rate of binary black hole mergers.
+
+Dynamical formation and isolated binary evolution mechanisms are of course not mutually exclusive; for example, the inner binaries in hierarchical triple systems may evolve as isolated binaries, but may then be brought together more efficiently through Lidov-Kozai oscillations \citep{Lidov:1962,Kozai:1962}; see, e.g., \citet{PeretsKratter:2012,Belczynski:2014VMS}.
 
 
 \section{Expected properties of merging systems}\label{merge}
